Created footer of home page and completed all tasks of day 4 (footer, offer page: navbar, and offer info

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>PharmEasy clone</title>
     <link rel="icon" href="https://assets.pharmeasy.in/apothecary/images/favicon.png">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/footer.css">
     <script src="https://kit.fontawesome.com/c0adbb8084.js" crossorigin="anonymous"></script>
 </head>
 
@@ -41,8 +42,10 @@
                     <p>Hello, Log In</p>
                 </li>
                 <li>
-                    <i class="fa-regular fa-percent"></i>
-                    <p>Offers</p>
+                    <a href="./offers.html">
+                        <i class="fa-regular fa-percent"></i>
+                        <p>Offers</p>
+                    </a>
                 </li>
                 <li>
                     <i class="fa-solid fa-cart-shopping"></i>
@@ -615,6 +618,98 @@
     </div>
 
 
+    <div class="footer container">
+        <div class="footer-top">
+            <div>
+                <ul>
+                    <h3>Company</h3>
+                    <li>About Us</li>
+                    <li>Careers</li>
+                    <li>Blog</li>
+                    <li>Partner with PharmEasy</li>
+                    <li>Sell at PharmEasy</li>
+                </ul>
+                <ul>
+                    <h3>Our Services</h3>
+                    <li>Order Medicine</li>
+                    <li>Healthcare Products</li>
+                    <li>Lab Tests</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h3>Featured Categories</h3>
+                    <li>Covid Essentials</li>
+                    <li>Personal Care</li>
+                    <li>Health Food and Drinks</li>
+                    <li>Beauty</li>
+                    <li>Skin Care</li>
+                    <li>Home Care</li>
+                    <li>Ayurvedic Care</li>
+                    <li>Sexual Wellness</li>
+                    <li>Fitness & Supplements</li>
+                    <li>Mother & Baby Care</li>
+                    <li>Healthcare Devices</li>
+                    <li>Health Condition</li>
+                    <li>Diabetic Care</li>
+                    <li>Elderly Care</li>
+                    <li>Accessories And Wearables</li>
+                    <li>Value Store</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h3>Need Help</h3>
+                    <li>Browse All Medicines</li>
+                    <li>Browse All Molecules</li>
+                    <li>Browse All Cities & Areas</li>
+                    <li>Browse All Stores</li>
+                    <li>FAQs</li>
+                </ul>
+                <ul>
+                    <h3>Policy Info</h3>
+                    <li>Editorial Policy</li>
+                    <li>Privacy Policy</li>
+                    <li>Vulnerability Disclosure Policy</li>
+                    <li>Terms and Conditions</li>
+                    <li>Customer Supprt Policy</li>
+                    <li>Return Policy</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h3>Follow us on</h3>
+                    <li><img src="https://assets.pharmeasy.in/apothecary/images/Instagram.svg?dim=32x0"></li>
+                    <li><img src="https://assets.pharmeasy.in/apothecary/images/facebook.svg?dim=32x0"></li>
+                    <li><img src="https://assets.pharmeasy.in/apothecary/images/Youtube.svg?dim=32x0"></li>
+                    <li><img src="https://assets.pharmeasy.in/apothecary/images/Twitter.svg?dim=32x0"></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <h3>Our Payment Partners</h3>
+            <div>
+                <div>
+                    <img src="https://assets.pharmeasy.in/apothecary/images/gpay.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/paytm.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/phonepe.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/amazon.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/mobikwik.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/olamoney.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/maestro.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/mastercard.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/visa.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/rupay.png?dim=1024x0">
+                </div>
+                <p>© 2022 PharmEasy. All Rights Reserved</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="floating-button">
+        <i class="fa-solid fa-phone"></i>
+    </div>
 
     <script src="script/index.js"></script>
 </body>
