--- a/offers.html
+++ b/offers.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="css/offers.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/sidebars.css">
     <script src="https://kit.fontawesome.com/c0adbb8084.js" crossorigin="anonymous"></script>
 </head>
 
@@ -47,7 +48,7 @@
                                 <p>Offers</p>
                             </a>
                         </li>
-                        <li>
+                        <li id="open_login">
                             <i class="fa-regular fa-user"></i>
                             <p>Login/Signup</p>
                         </li>
@@ -86,18 +87,232 @@
     </div>
 
 
-    <!-- <div class="pincode-selector">
-        <div>
-            <h1>Choose your<br>Location</h1>
+    <!-- Day 5 -->
+
+    <div class="offers-coupons container">
+        <form class="filter-offers">
+            <input type="radio" name="choice" value="All" id="choice--all" checked />
+            <label for="choice--all">All</label>
+
+            <input type="radio" name="choice" value="Payment" id="choice--payment" />
+            <label for="choice--payment">Payment</label>
+
+            <input type="radio" name="choice" value="Medicine" id="choice--medicine" />
+            <label for="choice--medicine">Medicine</label>
+
+            <input type="radio" name="choice" value="Diagnostic" id="choice--diagnostic" />
+            <label for="choice--diagnostic">Diagnostic</label>
+
+            <input type="radio" name="choice" value="Healthcare" id="choice--healthcare" />
+            <label for="choice--healthcare">Healthcare</label>
+        </form>
+
+        <div class="offer-list">
 
         </div>
-    </div> -->
-
-
-    <div class="space">
 
     </div>
+
+
+    <div class="offer-info container">
+        <div>
+            <p>Total No. of Offers</p>
+            <h3 id="cards-count">0</h3>
+        </div>
+        <div>
+            <p>Discount for New Users</p>
+            <h3>15% OFF</h3>
+        </div>
+        <div>
+            <p>Discount for All Users</p>
+            <h3>15% OFF</h3>
+        </div>
+        <div>
+            <p>Additional Offers</p>
+            <h3>Cashback & shopping Vouchers</h3>
+        </div>
+    </div>
+
+    <p class="disclaimer container">Disclaimer: The offer/discount rate/cashback are geography specific and may vary in
+        different geographical regions. PharmEasy reserves the right to discontinue/modify/change the offer/discount
+        rates/cashback at any time without prior notice. Notwithstanding anything contained herein offer/discount
+        rates/cashback reflected in the cart at the time of checkout shall be considered final & binding. Under no
+        circumstance will the offer/discount/cashback being offered herein be settled with cash in lieu by PharmEasy.
+        T&C apply</p>
+
+    <div class="FAQ container">
+    </div>
+
+
+    <div class="policy container">
+        <div>
+            <img src="https://assets.pharmeasy.in/web-assets/dist/9ac2da37.svg?dim=0x72&dpr=0.6666666865348816&q=100">
+            <h3>1 Lakh+ Products</h3>
+            <p>We maintain strict quality controls on all our partner retailers, so that you always get standard quality
+                products.</p>
+        </div>
+        <div>
+            <img src="https://assets.pharmeasy.in/web-assets/dist/2f258fe0.svg?dim=0x72&dpr=0.6666666865348816&q=100">
+            <h3>Secure Payment</h3>
+            <p>100% secure and trusted payment protection</p>
+        </div>
+        <div>
+            <img src="https://assets.pharmeasy.in/web-assets/dist/256fe591.svg?dim=0x72&dpr=0.6666666865348816&q=100">
+            <h3>Easy Return</h3>
+            <p>We have a new and dynamic return window policy for medicines and healthcare items. Refer FAQs section for
+                more details.</p>
+        </div>
+    </div>
+
+    <div class="app-promo container">
+        <img src="https://assets.pharmeasy.in/web-assets/dist/34a16ae8.jpg">
+        <div>
+            <p>Download the App for Free</p>
+            <div>
+                <button><img src="https://assets.pharmeasy.in/web-assets/dist/3380aedc.png"> Google Play</button>
+                <button><img src="https://assets.pharmeasy.in/web-assets/dist/9bf5c576.png"> App Store</button>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="footer container">
+        <div class="footer-top">
+            <div>
+                <ul>
+                    <h3>Company</h3>
+                    <li>About Us</li>
+                    <li>Careers</li>
+                    <li>Blog</li>
+                    <li>Partner with PharmEasy</li>
+                    <li>Sell at PharmEasy</li>
+                </ul>
+                <ul>
+                    <h3>Our Services</h3>
+                    <li>Order Medicine</li>
+                    <li>Healthcare Products</li>
+                    <li>Lab Tests</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h3>Featured Categories</h3>
+                    <li>Covid Essentials</li>
+                    <li>Personal Care</li>
+                    <li>Health Food and Drinks</li>
+                    <li>Beauty</li>
+                    <li>Skin Care</li>
+                    <li>Home Care</li>
+                    <li>Ayurvedic Care</li>
+                    <li>Sexual Wellness</li>
+                    <li>Fitness & Supplements</li>
+                    <li>Mother & Baby Care</li>
+                    <li>Healthcare Devices</li>
+                    <li>Health Condition</li>
+                    <li>Diabetic Care</li>
+                    <li>Elderly Care</li>
+                    <li>Accessories And Wearables</li>
+                    <li>Value Store</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h3>Need Help</h3>
+                    <li>Browse All Medicines</li>
+                    <li>Browse All Molecules</li>
+                    <li>Browse All Cities & Areas</li>
+                    <li>Browse All Stores</li>
+                    <li>FAQs</li>
+                </ul>
+                <ul>
+                    <h3>Policy Info</h3>
+                    <li>Editorial Policy</li>
+                    <li>Privacy Policy</li>
+                    <li>Vulnerability Disclosure Policy</li>
+                    <li>Terms and Conditions</li>
+                    <li>Customer Supprt Policy</li>
+                    <li>Return Policy</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h3>Follow us on</h3>
+                    <li><img src="https://assets.pharmeasy.in/apothecary/images/Instagram.svg?dim=32x0"></li>
+                    <li><img src="https://assets.pharmeasy.in/apothecary/images/facebook.svg?dim=32x0"></li>
+                    <li><img src="https://assets.pharmeasy.in/apothecary/images/Youtube.svg?dim=32x0"></li>
+                    <li><img src="https://assets.pharmeasy.in/apothecary/images/Twitter.svg?dim=32x0"></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <h3>Our Payment Partners</h3>
+            <div>
+                <div>
+                    <img src="https://assets.pharmeasy.in/apothecary/images/gpay.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/paytm.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/phonepe.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/amazon.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/mobikwik.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/olamoney.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/maestro.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/mastercard.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/visa.png?dim=1024x0">
+                    <img src="https://assets.pharmeasy.in/apothecary/images/rupay.png?dim=1024x0">
+                </div>
+                <p>© 2022 PharmEasy. All Rights Reserved</p>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="sidebar-background">
+        <div class="pincode-sidebar">
+            <i class="fa-solid fa-xmark close" id="close"></i>
+            <h1>Choose your<br>Location</h1>
+            <form>
+                <input type="number" id="pincode" placeholder="Enter PIN Code">
+                <input type="submit" value="Check">
+            </form>
+
+            <div>
+                <img src="https://assets.pharmeasy.in/web-assets/dist/ff969f07.svg">
+                <h3>Login to View Address</h3>
+            </div>
+            <div>
+                <img src="https://assets.pharmeasy.in/web-assets/dist/90ee736b.svg">
+                <p>Serving more than 1,000 towns and cities in India.</p>
+            </div>
+            <div>
+                <img
+                    src="https://assets.pharmeasy.in/web-assets/dist/0c22e009.svg?dim=0x32&dpr=0.6666666865348816&q=100">
+                <p>Over 30,00,000 orders safely delivered<a
+                        href="https://pharmeasy.in/blog/5-step-safety-measures-were-taking-while-delivering-medicines/">Know
+                        More</a></p>
+            </div>
+        </div>
+
+        <div class="login-sidebar" id="login-sidebar">
+            <div>
+                <img src="https://assets.pharmeasy.in/web-assets/dist/fca22bc9.png">
+                <img src="https://assets.pharmeasy.in/web-assets/dist/1fe1322a.svg">
+            </div>
+            <i class="fa-solid fa-xmark login-close"></i>
+            <h3>Quick Login / Register</h3>
+            <form>
+                <div>
+                    <label for="phone">+91</label>
+                    <input type="tel" id="phone" placeholder="Enter your phone number">
+                </div>
+                <input type="submit" value="Send OTP">
+            </form>
+            <p>By clicking continue, you agree with our Privacy Policy</p>
+        </div>
+    </div>
+
+
     <script src="./script/offers.js"></script>
+    <script src="./script/sidebars.js"></script>
 </body>
 
 </html>
